# FinalAssigmentCPP

./: .gitignore  CMakeLists.txt  README.md
data/: schedule.csv
src/: Menu.cpp  Menu.h  ScheduleDB.cpp  ScheduleDB.h  ScheduleRecord.cpp  ScheduleRecord.h  main.cpp
